Fixed pom configurations

--- a/dspbench-api/pom.xml
+++ b/dspbench-api/pom.xml
@@ -3,15 +3,15 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.streamer</groupId>
-        <artifactId>streamer</artifactId>
+        <groupId>com.dspbench</groupId>
+        <artifactId>dspbench</artifactId>
         <version>1.1</version>
     </parent>
     
-    <groupId>com.streamer</groupId>
-    <artifactId>streamer-api</artifactId>
+    <groupId>com.dspbench</groupId>
+    <artifactId>dspbench-api</artifactId>
     <version>1.1</version>
-    <name>streamer-api</name>
+    <name>dspbench-api</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
