--- a/dspbench-local/pom.xml
+++ b/dspbench-local/pom.xml
@@ -3,21 +3,21 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <groupId>com.streamer</groupId>
-        <artifactId>streamer</artifactId>
+        <groupId>com.dspbench</groupId>
+        <artifactId>dspbench</artifactId>
         <version>1.1</version>
     </parent>
     
-    <groupId>com.streamer</groupId>
-    <artifactId>streamer-local</artifactId>
+    <groupId>com.dspbench</groupId>
+    <artifactId>dspbench-local</artifactId>
     <version>1.1</version>
-    <name>streamer-local</name>
+    <name>dspbench-local</name>
     <url>http://maven.apache.org</url>
     
     <dependencies>
         <dependency>
-            <groupId>com.streamer</groupId>
-            <artifactId>streamer-api</artifactId>
+            <groupId>com.dspbench</groupId>
+            <artifactId>dspbench-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         
