--- a/dspbench-producer/pom.xml
+++ b/dspbench-producer/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <name>streamer-producer</name>
+    <name>dspbench-producer</name>
     <version>1.0</version>
-    <groupId>com.streamer</groupId>
-    <artifactId>streamer-producer</artifactId>
+    <groupId>com.dspbench</groupId>
+    <artifactId>dspbench-producer</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
