--- a/dspbench-local/pom.xml
+++ b/dspbench-local/pom.xml
@@ -22,6 +22,12 @@
         </dependency>
         
         <dependency>
+            <groupId>com.dspbench</groupId>
+            <artifactId>dspbench-applications</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j-log4j12.version}</version>
