--- a/dspbench-applications/src/main/resources/config/word-count.properties
+++ b/dspbench-applications/src/main/resources/config/word-count.properties
@@ -1,12 +1,9 @@
 wc.source.threads=1
-wc.source.class=com.streamer.base.source.KafkaSource
+wc.source.class=com.streamer.base.source.FileSource
 wc.source.parser=com.streamer.base.source.parser.StringParser
-wc.kafka.zookeeper.host=
-wc.kafka.source.topic=sentences
-
+wc.source.path=./data/books.dat
 wc.splitter.threads=1
 wc.counter.threads=1
-
 wc.sink.threads=1
 wc.sink.class=com.streamer.base.sink.AsyncFileSink
 wc.sink.path=/tmp/word-count-%(id).out
