--- a/dspbench-threads/src/main/resources/config/spam-filter.properties
+++ b/dspbench-threads/src/main/resources/config/spam-filter.properties
@@ -1,22 +1,18 @@
 sf.training.source.threads=1
 sf.training.source.class=com.streamer.base.source.FileSource
 sf.training.source.parser=com.streamer.examples.spamfilter.JsonEmailParser
-sf.source.path=/app/data/enron.json
+sf.training.source.path=/app/data/enron.json
 
 sf.analysis.source.threads=1
 sf.analysis.source.class=com.streamer.base.source.FileSource
 sf.analysis.source.parser=com.streamer.examples.spamfilter.JsonEmailParser
-sf.analysis.kafka.zookeeper.host=
-sf.analysis.kafka.source.topic=emails
+sf.analysis.source.path=/app/data/enron.json
 
 sf.parser.threads=1
 sf.tokenizer.threads=1
 sf.wordprob.threads=1
 sf.bayesrule.threads=1
 sf.bayesrule.spam_probability=0.9
-sf.wordprob.wordmap=
-#sf.wordprob.wordmap.use_default=true
 
 sf.sink.threads=1
 sf.sink.class=com.streamer.base.sink.ConsoleSink
-sf.sink.path=
