--- a/dspbench-threads/src/main/resources/config/sentiment-analysis.properties
+++ b/dspbench-threads/src/main/resources/config/sentiment-analysis.properties
@@ -1,12 +1,10 @@
 sa.source.threads=1
 sa.source.class=com.streamer.base.source.FileSource
 sa.source.parser=com.streamer.examples.sentimentanalysis.JsonTweetParser
-sa.kafka.zookeeper.host=
-sa.kafka.source.topic=tweets
+sa.source.path=/app/data/tweetstream.jsonl
 
 sa.classifier.threads=1
 sa.classifier.type=basic
 
 sa.sink.threads=1
 sa.sink.class=com.streamer.base.sink.ConsoleSink
-sa.sink.path
