--- a/dspbench-threads/src/main/resources/config/reinforcement-learner.properties
+++ b/dspbench-threads/src/main/resources/config/reinforcement-learner.properties
@@ -1,14 +1,12 @@
 rl.event.source.threads=1
-rl.event.source.class=com.streamer.base.source.KafkaSource
+rl.event.source.class=com.streamer.base.source.FileSource
 rl.event.source.parser=com.streamer.examples.reinforcementlearner.EventRewardParser
-rl.event.kafka.zookeeper.host=
-rl.event.kafka.source.topic=events
+rl.event.source.path=/app/data/reinforcement-events.csv
 
 rl.reward.source.threads=1
-rl.reward.source.class=com.streamer.base.source.KafkaSource
+rl.reward.source.class=com.streamer.base.source.FileSource
 rl.reward.source.parser=com.streamer.examples.reinforcementlearner.EventRewardParser
-rl.reward.kafka.zookeeper.host=
-rl.reward.kafka.source.topic=rewards
+rl.reward.source.path=/app/data/reinforcement-rewards.csv
 
 rl.learner.threads=1
 rl.learner.type=intervalEstimator
@@ -23,4 +21,3 @@ rl.min.reward.distr.sample=30
 
 rl.sink.threads=1
 rl.sink.class=com.streamer.base.sink.ConsoleSink
-rl.sink.path=
