--- a/dspbench-threads/src/main/resources/config/log-processing.properties
+++ b/dspbench-threads/src/main/resources/config/log-processing.properties
@@ -5,15 +5,15 @@ lp.source.path=/app/data/http-server.log
 
 lp.count.sink.threads=1
 lp.count.sink.class=com.streamer.base.sink.ConsoleSink
-lp.count.sink.path=
 
 lp.status.sink.threads=1
 lp.status.sink.class=com.streamer.base.sink.ConsoleSink
-lp.status.sink.path=
 
 lp.country.sink.threads=1
 lp.country.sink.class=com.streamer.base.sink.ConsoleSink
-lp.country.sink.path=
+
+lp.volume.sink.threads=1
+lp.volume.sink.class=com.streamer.base.sink.ConsoleSink
 
 lp.volume_counter.window=60
 lp.volume_counter.threads=1
