--- a/dspbench-threads/src/main/resources/config/voip-stream.properties
+++ b/dspbench-threads/src/main/resources/config/voip-stream.properties
@@ -1,5 +1,5 @@
-vs.spout.class=storm.applications.spout.GeneratorSpout
-vs.spout.generator=storm.applications.spout.generator.CDRGenerator
+vs.source.class=storm.applications.spout.GeneratorSpout
+vs.source.generator=storm.applications.spout.generator.CDRGenerator
 
 vs.sink.class=storm.applications.sink.ConsoleSink
 
