--- a/dspbench-threads/src/main/resources/config/voip-stream.properties
+++ b/dspbench-threads/src/main/resources/config/voip-stream.properties
@@ -1,7 +1,7 @@
-vs.source.class=storm.applications.spout.GeneratorSpout
-vs.source.generator=storm.applications.spout.generator.CDRGenerator
+vs.source.class=com.streamer.base.source.GeneratorSource
+vs.source.generator=com.streamer.examples.voipstream.CDRGenerator
 
-vs.sink.class=storm.applications.sink.ConsoleSink
+vs.sink.class=com.streamer.base.sink.ConsoleSink
 
 vs.spout.threads=1
 vs.vardetect.threads=1
