--- a/dspbench-threads/src/main/resources/config/sentiment-analysis.properties
+++ b/dspbench-threads/src/main/resources/config/sentiment-analysis.properties
@@ -1,6 +1,6 @@
 sa.source.threads=1
 sa.source.class=com.streamer.base.source.FileSource
-sa.source.parser=com.streamer.examples.sentimentanalysis.JsonTweetParser
+sa.source.parser=com.streamer.base.source.parser.JsonTweetParser
 sa.source.path=/app/data/tweetstream.jsonl
 
 sa.classifier.threads=1
