--- a/dspbench-threads/src/main/resources/config/traffic-monitoring.properties
+++ b/dspbench-threads/src/main/resources/config/traffic-monitoring.properties
@@ -1,14 +1,12 @@
 tm.source.threads=1
 tm.source.class=com.streamer.base.source.FileSource
 tm.source.parser=com.streamer.examples.trafficmonitoring.BeijingTaxiTraceParser
-wc.source.path=/app/data/taxi-traces.csv
+tm.source.path=/app/data/taxi-traces.csv
 
 tm.road.feature.id_key=osm_id
-#tm.road.feature.width_key
 tm.map_matcher.shapefile=/app/data/beijing/roads.shp
 tm.map_matcher.threads=1
 
-# Beijing bounding box
 tm.map_matcher.lat.min=39.689602
 tm.map_matcher.lat.max=40.122410
 tm.map_matcher.lon.min=116.105789
@@ -17,4 +15,3 @@ tm.speed_calculator.threads=1
 
 tm.sink.threads=1
 tm.sink.class=com.streamer.base.sink.ConsoleSink
-tm.sink.path=
