--- a/dspbench-threads/src/main/resources/config/trending-topics.properties
+++ b/dspbench-threads/src/main/resources/config/trending-topics.properties
@@ -1,12 +1,10 @@
 tt.source.threads=1
 tt.source.class=com.streamer.base.source.FileSource
-tt.source.parser=com.streamer.base.source.parser.JsonParser
-tt.kafka.zookeeper.host=
-tt.kafka.source.topic=tweets
+tt.source.parser=com.streamer.base.source.parser.JsonTweetParser
+tt.source.path=/app/data/tweetstream.jsonl
 
 tt.topic_extractor.threads=1
 tt.counter.threads=1
-storm.rolling_count.window_length=10
 tt.counter.frequency=2
 tt.iranker.threads=1
 tt.tranker.threads=1
@@ -14,4 +12,3 @@ tt.topk=10
 
 tt.sink.threads=1
 tt.sink.class=com.streamer.base.sink.ConsoleSink
-tt.sink.path=
