Fix issue on machine outlier dataset

--- a/dspbench-threads/src/main/resources/config/machine-outlier.properties
+++ b/dspbench-threads/src/main/resources/config/machine-outlier.properties
@@ -1,7 +1,7 @@
 mo.source.threads=1
 mo.source.class=com.streamer.base.source.FileSource
-mo.source.parser=com.streamer.examples.machineoutlier.GoogleTracesParser
-mo.source.path=/app/data/cluster-traces.csv
+mo.source.parser=com.streamer.examples.machineoutlier.AlibabaMachineUsageParser
+mo.source.path=/app/data/machine-usage.csv
         
 mo.scorer.threads=1
 mo.scorer.data_type=machineMetadata
