Fixed and refactored spam filter app

--- a/dspbench-storm/Dockerfile
+++ b/dspbench-storm/Dockerfile
@@ -7,6 +7,8 @@ RUN ls /home/gradle/src/build/libs/
 
 FROM openjdk:11-jre-slim
 
+RUN apt-get update && apt-get install -y unzip
+
 RUN mkdir /app
 RUN mkdir /app/lib
 
@@ -14,6 +16,9 @@ COPY --from=build /home/gradle/src/build/libs/dspbench-storm-uber-1.0.jar /app/a
 COPY bin/lib/properties-serializer.jar /app/lib/properties-serializer.jar
 COPY bin/dspbench-storm.sh /app/dspbench-storm.sh
 COPY data /app/data
+COPY src/main/resources/spamfilter /app/spamfilter
 COPY src/main/resources/config/ /app/config
+
+RUN unzip /app/spamfilter/wordmap.zip -d /app/spamfilter/
 
 ENTRYPOINT ["/app/dspbench-storm.sh", "/app/application.jar"]
