--- a/dspbench-threads/src/main/resources/config/spam-filter.properties
+++ b/dspbench-threads/src/main/resources/config/spam-filter.properties
@@ -11,6 +11,7 @@ sf.analysis.source.path=/app/data/enron.json
 sf.parser.threads=1
 sf.tokenizer.threads=1
 sf.wordprob.threads=1
+sf.wordprob.wordmap=/app/spamfilter/wordmap.json
 sf.bayesrule.threads=1
 sf.bayesrule.spam_probability=0.9
 
