--- a/dspbench-storm/src/main/resources/config/spam-filter.properties
+++ b/dspbench-storm/src/main/resources/config/spam-filter.properties
@@ -11,6 +11,7 @@ sf.analysis.spout.parser=org.dspbench.applications.spamfilter.JsonEmailParser
 sf.parser.threads=1
 sf.tokenizer.threads=1
 sf.wordprob.threads=1
+sf.wordprob.wordmap=/app/spamfilter/wordmap.json
 sf.bayesrule.threads=1
 sf.bayesrule.spam_probability=0.9
 sf.wordprob.wordmap.use_default=true
