--- a/dspbench-spark/build.gradle
+++ b/dspbench-spark/build.gradle
@@ -22,25 +22,30 @@ repositories {
 }
 
 dependencies {
-    / https://mvnrepository.com/artifact/org.apache.spark/spark-core
     implementation group: 'org.apache.spark', name: 'spark-core_2.12', version: '3.2.1'
-
-    // https://mvnrepository.com/artifact/org.apache.spark/spark-sql
     implementation group: 'org.apache.spark', name: 'spark-sql_2.12', version: '3.2.1'
-
-
-    // https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-hdfs
     implementation group: 'org.apache.hadoop', name: 'hadoop-hdfs', version: '3.2.1'
-
-    // https://mvnrepository.com/artifact/org.apache.spark/spark-streaming
     implementation group: 'org.apache.spark', name: 'spark-streaming_2.12', version: '3.2.1'
-
-
-    // https://mvnrepository.com/artifact/org.apache.spark/spark-sql-kafka-0-10
     implementation group: 'org.apache.spark', name: 'spark-sql-kafka-0-10_2.12', version: '3.2.1'
-
-    // https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10
     implementation group: 'org.apache.spark', name: 'spark-streaming-kafka-0-10_2.12', version: '3.2.1'
+
+    implementation group: 'redis.clients', name: 'jedis', version: '3.5.1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.5.2'
+    implementation 'com.beust:jcommander:1.82'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'com.aliasi:lingpipe:4.0.1'
+    implementation 'org.twitter4j:twitter4j-stream:4.0.7'
+    implementation 'org.geotools:gt-shapefile:26.0'
+    implementation 'org.geotools:gt-xml:26.0'
+    implementation 'net.postgis:postgis-jdbc:2.5.1'
+    implementation 'com.baqend:bloom-filter:2.2.4'
+    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'org.apache.hadoop:hadoop-core:1.2.1'
+    implementation 'com.maxmind.geoip2:geoip2:2.15.0'
+    implementation 'joda-time:joda-time:2.10.13'
+
 
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
