Fixed reinforcement learner

--- a/dspbench-threads/src/main/resources/config/reinforcement-learner.properties
+++ b/dspbench-threads/src/main/resources/config/reinforcement-learner.properties
@@ -1,12 +1,10 @@
 rl.event.source.threads=1
-rl.event.source.class=org.dspbench.base.source.FileSource
-rl.event.source.parser=org.dspbench.applications.reinforcementlearner.EventRewardParser
-rl.event.source.path=/app/data/reinforcement-events.csv
+rl.event.source.class=org.dspbench.base.source.GeneratorSource
+rl.event.source.generator=org.dspbench.applications.reinforcementlearner.CTRGenerator
+rl.generator.max_rounds=10000
 
 rl.reward.source.threads=1
-rl.reward.source.class=org.dspbench.base.source.FileSource
-rl.reward.source.parser=org.dspbench.applications.reinforcementlearner.EventRewardParser
-rl.reward.source.path=/app/data/reinforcement-rewards.csv
+rl.reward.source.class=org.dspbench.applications.reinforcementlearner.RewardSource
 
 rl.learner.threads=1
 rl.learner.type=intervalEstimator
@@ -20,4 +18,7 @@ rl.confidence.limit.reduction.round.interval=50
 rl.min.reward.distr.sample=30
 
 rl.sink.threads=1
-rl.sink.class=org.dspbench.base.sink.ConsoleSink
+rl.sink.class=org.dspbench.applications.reinforcementlearner.ActionSink
+rl.sink.socket.host=localhost
+rl.sink.socket.port=6000
+
