--- a/dspbench-storm/build.gradle
+++ b/dspbench-storm/build.gradle
@@ -27,6 +27,8 @@ repositories {
 dependencies {
     // todo: add jar to classpath of docker
     compileOnly 'org.apache.storm:storm-core:2.2.0'
+    implementation 'org.apache.storm:storm-kafka-client:2.2.0'
+    implementation 'org.apache.kafka:kafka-clients:2.6.0'
 
     implementation group: 'redis.clients', name: 'jedis', version: '3.5.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
