--- a/dspbench-storm/src/main/resources/cluster-config/ads-analytics.properties
+++ b/dspbench-storm/src/main/resources/cluster-config/ads-analytics.properties
@@ -1,11 +1,13 @@
 aa.click.spout.threads=1
-aa.click.spout.class=org.dspbench.spout.FileSpout
-aa.click.spout.path=/app/data/ad-clicks.dat
+aa.click.spout.class=org.dspbench.spout.KafkaSpout
+aa.kafka.zookeeper.host=
+aa.click.kafka.spout.topic=ads-clicks
+aa.kafka.consumer.id=adsanalytics
 aa.click.spout.parser=org.dspbench.applications.adsanalytics.AdEventParser
 
 aa.impressions.spout.threads=1
-aa.impressions.spout.class=org.dspbench.spout.FileSpout
-aa.impressions.spout.path=/app/data/ad-clicks.dat
+aa.impressions.spout.class=org.dspbench.spout.KafkaSpout
+aa.impressions.kafka.spout.topic=ads-impressions
 aa.impressions.spout.parser=org.dspbench.applications.adsanalytics.AdEventParser
 
 aa.ctr.threads=1
