--- a/dspbench-storm/src/main/resources/cluster-config/bargain-index.properties
+++ b/dspbench-storm/src/main/resources/cluster-config/bargain-index.properties
@@ -1,11 +1,13 @@
 bi.quotes.spout.threads=1
-bi.quotes.spout.class=org.dspbench.spout.FileSpout
-bi.quotes.spout.path=/app/data/stocks.csv
+bi.quotes.spout.class=org.dspbench.spout.KafkaSpout
+bi.kafka.zookeeper.host=
+bi.quotes.kafka.spout.topic=stock-quotes
+bi.kafka.consumer.id=bargainindex
 bi.quotes.spout.parser=org.dspbench.applications.bargainindex.StockQuotesParser
 
 bi.trades.spout.threads=1
-bi.trades.spout.class=org.dspbench.spout.FileSpout
-bi.trades.spout.path=/app/data/stocks.csv
+bi.trades.spout.class=org.dspbench.spout.KafkaSpout
+bi.trades.kafka.spout.topic=stock-trades
 bi.trades.spout.parser=org.dspbench.applications.bargainindex.StockQuotesParser
 
 bi.vwap.threads=1
