--- a/dspbench-flink/build.gradle
+++ b/dspbench-flink/build.gradle
@@ -1,18 +1,36 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
-version 'unspecified'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+version '1.0'
+
+jar {
+    enabled = true
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'org.apache.flink:flink-java:1.15.1'
+    implementation 'org.apache.flink:flink-clients:1.15.1'
+    compileOnly 'org.apache.flink:flink-streaming-java:1.15.1'
+    implementation 'org.apache.flink:flink-connector-kafka:1.15.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
 test {
     useJUnitPlatform()
+}
+
+shadowJar {
+    baseName = project.name + '-uber'
+    classifier = ''
+    mergeServiceFiles()
 }
