--- a/dspbench-storm/src/main/resources/config/wordcount.properties
+++ b/dspbench-storm/src/main/resources/config/wordcount.properties
@@ -12,6 +12,6 @@ wc.sink.class=org.dspbench.sink.ConsoleSink
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
-metrics.interval.unit=seconds
+metrics.interval.unit=milliseconds
 
-metrics.output=/home/luan/Documents/throughput
+metrics.output=/home/luan/Documents/
