fix metrics for many sinks

--- a/dspbench-storm/src/main/resources/config/smartgrid.properties
+++ b/dspbench-storm/src/main/resources/config/smartgrid.properties
@@ -22,6 +22,6 @@ sg.house_load.frequency=15
 sg.plug_load.frequency=15
 
 metrics.enabled=true
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
 metrics.output=/home/luan/Documents/smartgrid
