--- a/dspbench-storm/src/main/resources/config/spikedetection.properties
+++ b/dspbench-storm/src/main/resources/config/spikedetection.properties
@@ -14,6 +14,6 @@ sd.spike_detector.threshold=0.03
 
 metrics.enabled=true
 metrics.reporter=csv
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
 metrics.output=/home/luan/Documents/spikeDetection
