--- a/dspbench-storm/src/main/resources/config/clickanalytics.properties
+++ b/dspbench-storm/src/main/resources/config/clickanalytics.properties
@@ -21,6 +21,6 @@ storm.geoip2.db=data/GeoLite2-City.mmdb
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
 metrics.output=/home/luan/Documents/clickanalytics
