--- a/dspbench-storm/src/main/resources/config/frauddetection.properties
+++ b/dspbench-storm/src/main/resources/config/frauddetection.properties
@@ -16,6 +16,6 @@ fd.sink.class=org.dspbench.sink.ConsoleSink
 
 metrics.enabled=true
 metrics.reporter=csv
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
 metrics.output=/home/luan/Documents/frauddetection
