--- a/dspbench-storm/src/main/resources/config/logprocessing.properties
+++ b/dspbench-storm/src/main/resources/config/logprocessing.properties
@@ -23,6 +23,6 @@ storm.geoip2.db=data/GeoLite2-City.mmdb
 
 metrics.enabled=true
 metrics.reporter=csv
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
 metrics.output=/home/luan/Documents/logprocesing
