--- a/dspbench-storm/src/main/resources/config/machineoutlier.properties
+++ b/dspbench-storm/src/main/resources/config/machineoutlier.properties
@@ -14,6 +14,6 @@ mo.sink.class=org.dspbench.sink.ConsoleSink
 
 metrics.enabled=true
 metrics.reporter=csv
-metrics.interval.unit=milliseconds
+metrics.interval.unit=sdsdseconds
 
 metrics.output=/home/luan/Documents/machineoutlier
