--- a/dspbench-storm/src/main/resources/config/trafficmonitoring.properties
+++ b/dspbench-storm/src/main/resources/config/trafficmonitoring.properties
@@ -17,6 +17,6 @@ tm.sink.threads=1
 tm.sink.class=org.dspbench.sink.ConsoleSink
 
 metrics.enabled=true
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
 metrics.output=/home/luan/Documents/trafficmonitoring
