--- a/dspbench-storm/src/main/resources/config/wordcount.properties
+++ b/dspbench-storm/src/main/resources/config/wordcount.properties
@@ -1,6 +1,6 @@
 wc.spout.threads=1
 wc.spout.class=org.dspbench.spout.FileSpout
-wc.spout.path=data/books.dat
+wc.spout.path=data/credit-card.dat
 wc.spout.parser=org.dspbench.applications.wordcount.StringParser
 
 wc.splitter.threads=1
@@ -14,4 +14,4 @@ metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/luan/Documents/
+metrics.output=/home/luan/Documents/wordcount
