--- a/dspbench-flink/build.gradle
+++ b/dspbench-flink/build.gradle
@@ -33,11 +33,14 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'com.aliasi:lingpipe:4.0.1'
     implementation 'org.geotools:gt-shapefile:26.0'
     implementation 'org.geotools:gt-xml:26.0'
     implementation 'com.maxmind.geoip2:geoip2:2.15.0'
+    implementation 'net.postgis:postgis-jdbc:2.5.1'
+    implementation 'com.beust:jcommander:1.82'
 }
 
 test {
