--- a/dspbench-flink/src/main/resources/config/smart-grid.properties
+++ b/dspbench-flink/src/main/resources/config/smart-grid.properties
@@ -2,8 +2,8 @@ sg.slice.length=60
 
 sg.spout.threads=1
 sg.spout.class=org.dspbench.spout.FileSpout
-sg.spout.path=data/smart-grid.csv
-sg.spout.parser=org.dspbench.applications.smartgrid.SmartPlugParser
+sg.spout.path=/app/data/smart-grid.csv
+sg.spout.parser=storm.applications.spout.parser.DEBS14GCParser
 
 sg.outlier.sink.threads=1
 sg.outlier.sink.class=org.dspbench.sink.ConsoleSink
@@ -20,8 +20,3 @@ sg.outlier_detector.threads=1
 
 sg.house_load.frequency=15
 sg.plug_load.frequency=15
-
-metrics.enabled=true
-metrics.interval.unit=milliseconds
-
-metrics.output=/home/gabriel/Documents/smartgrid
