Aleluia ao Flink

--- a/dspbench-flink/src/main/resources/config/machineoutlier.properties
+++ b/dspbench-flink/src/main/resources/config/machineoutlier.properties
@@ -13,6 +13,6 @@ mo.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
 metrics.reporter=csv
-metrics.interval.unit=sdsdseconds
+metrics.interval.unit=milliseconds
 
-metrics.output=/home/luan/Documents/machineoutlier
+metrics.output=/home/gabriel/Documents/machineoutlier
