--- a/dspbench-flink/src/main/resources/config/smartgrid.properties
+++ b/dspbench-flink/src/main/resources/config/smartgrid.properties
@@ -21,6 +21,6 @@ sg.house_load.frequency=3
 sg.plug_load.frequency=3
 
 metrics.enabled=true
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
 metrics.output=/home/gabriel/Documents/smartgrid
