--- a/dspbench-flink/src/main/resources/config/frauddetection.properties
+++ b/dspbench-flink/src/main/resources/config/frauddetection.properties
@@ -16,6 +16,6 @@ fd.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
 metrics.reporter=csv
-metrics.interval.unit=seconds
+metrics.interval.unit=ssseconds
 
-metrics.output=/home/luan/Documents/frauddetection
+metrics.output=/home/gabriel/Documents/frauddetection
