--- a/dspbench-flink/src/main/resources/config/sentimentanalysis.properties
+++ b/dspbench-flink/src/main/resources/config/sentimentanalysis.properties
@@ -8,8 +8,8 @@ sa.classifier.type=basic
 sa.sink.threads=1
 sa.sink.class=flink.sink.ConsoleSink
 
-metrics.enabled=false
+metrics.enabled=true
 metrics.reporter=csv
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
-metrics.output=/home/luan/Documents/sentimentAnalysis
+metrics.output=/home/gabriel/Documents/sentimentAnalysis
