--- a/dspbench-spark/src/main/resources/config/clickanalytics.properties
+++ b/dspbench-spark/src/main/resources/config/clickanalytics.properties
@@ -1,5 +1,5 @@
 ca.source.threads=1
-ca.source.class=spark.streaming.source.KafkaSource
+ca.source.class=spark.streaming.source.FileSource
 ca.source.path=data/clickanalytics
 ca.source.parser=org.dspbench.applications.clickanalytics.ClickStreamParser
 
@@ -22,7 +22,7 @@ metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
-
+metrics.interval=1
 
 
 ca.kafka.zookeeper.host=192.168.20.167:9092
