--- a/dspbench-spark/src/main/resources/config/spikedetection.properties
+++ b/dspbench-spark/src/main/resources/config/spikedetection.properties
@@ -1,5 +1,5 @@
 sd.source.threads=1
-sd.source.class=spark.streaming.source.KafkaSource
+sd.source.class=spark.streaming.source.FileSource
 sd.source.path=data/spikedetection
 sd.source.parser=org.dspbench.applications.spikedetection.SensorParser
 
@@ -15,6 +15,7 @@ sd.spike_detector.threshold=0.03
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.unit=seconds
+metrics.interval=1
 
 sd.kafka.zookeeper.host=192.168.20.167:9092
 sd.kafka.source.topic=spikeDetect
