--- a/dspbench-spark/src/main/resources/config/wordcount.properties
+++ b/dspbench-spark/src/main/resources/config/wordcount.properties
@@ -1,16 +1,19 @@
 wc.source.threads=1
-wc.source.class=spark.streaming.source.KafkaSource
+wc.source.class=spark.streaming.source.FileSource
 wc.source.path=data/wordcount
 wc.sink.class=spark.streaming.sink.ConsoleSink
 
-metrics.enabled=true
-metrics.interval.unit=seconds
+
 
 
 wc.kafka.zookeeper.host=192.168.20.167:9092
 wc.kafka.source.topic=books
 wc.parser.threads=1
 
-wc.batch.size=100000
+wc.batch.size=2000
 
+metrics.enabled=true
+metrics.interval.unit=seconds
+metrics.reporter=csv
+metrics.interval=1
 metrics.output=/home/luan/Documents/wordcount
