--- a/dspbench-storm/src/main/resources/config/spikedetection.properties
+++ b/dspbench-storm/src/main/resources/config/spikedetection.properties
@@ -15,5 +15,6 @@ sd.spike_detector.threshold=0.03
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.unit=seconds
+metrics.interval.value=1
 
 metrics.output=/home/luan/Documents/spikeDetection
