--- a/dspbench-flink/src/main/resources/config/clickanalytics.properties
+++ b/dspbench-flink/src/main/resources/config/clickanalytics.properties
@@ -20,6 +20,6 @@ storm.geoip2.db=/home/gabriel/Documents/repos/DSPBenchLarcc/dspbench-flink/data/
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
-metrics.interval.unit=sdseconds
+metrics.interval.unit=seconds
 
 metrics.output=/home/gabriel/Documents/clickanalytics
