--- a/dspbench-flink/src/main/resources/config/logprocessing.properties
+++ b/dspbench-flink/src/main/resources/config/logprocessing.properties
@@ -22,6 +22,7 @@ storm.geoip2.db=/home/gabriel/Documents/repos/DSPBenchLarcc/dspbench-flink/data/
 
 metrics.enabled=true
 metrics.reporter=csv
-metrics.interval.unit=ssseconds
+metrics.interval.unit=seconds
+metrics.interval.value=1
 
 metrics.output=/home/gabriel/Documents/logProcesing
