--- a/dspbench-storm/src/main/resources/config/logprocessing.properties
+++ b/dspbench-storm/src/main/resources/config/logprocessing.properties
@@ -24,5 +24,6 @@ storm.geoip2.db=data/GeoLite2-City.mmdb
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.unit=seconds
+metrics.interval.value=1
 
-metrics.output=/home/luan/Documents/logprocesing
+metrics.output=/home/gabriel/Documents/logprocesing
