--- a/dspbench-spark/src/main/resources/config/logprocessing.properties
+++ b/dspbench-spark/src/main/resources/config/logprocessing.properties
@@ -1,5 +1,5 @@
 lp.source.threads=1
-lp.source.class=spark.streaming.source.KafkaSource
+lp.source.class=spark.streaming.source.FileSource
 lp.source.path=data/logprocessing
 lp.source.parser=org.dspbench.applications.logprocessing.CommonLogParser
 
@@ -24,6 +24,7 @@ geoip2.db=data/GeoLite2-City.mmdb
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.unit=seconds
+metrics.interval=1
 
 
 
