--- a/dspbench-spark/src/main/resources/config/logprocessing.properties
+++ b/dspbench-spark/src/main/resources/config/logprocessing.properties
@@ -1,5 +1,5 @@
 lp.source.threads=1
-lp.source.class=spark.streaming.source.FileSource
+lp.source.class=spark.streaming.source.KafkaSource
 lp.source.path=data/logprocessing
 lp.source.parser=org.dspbench.applications.logprocessing.CommonLogParser
 
@@ -19,7 +19,7 @@ lp.geo_finder.threads=1
 lp.geo_stats.threads=1
 
 spark.geoip.instance=geoip2
-geoip2.db=data/GeoLite2-City.mmdb
+geoip2.db=/data/GeoLite2-City.mmdb
 
 metrics.enabled=true
 metrics.reporter=csv
@@ -28,9 +28,10 @@ metrics.interval=1
 
 
 
-lp.kafka.zookeeper.host=192.168.20.167:9092
-lp.kafka.source.topic=logProcess
+lp.kafka.zookeeper.host=192.168.20.152:9092
+lp.kafka.source.topic=logs
 lp.parser.threads=1
-lp.batch.size=100000
+lp.batch.size=10000
+
 
 metrics.output=/home/luan/Documents/logprocesing
