configs and bin

--- a/dspbench-flink/src/main/resources/config/wordcount.properties
+++ b/dspbench-flink/src/main/resources/config/wordcount.properties
@@ -1,8 +1,8 @@
 wc.source.threads=1
 wc.source.class=flink.source.FileSource
-wc.source.path=/home/gabriel/Documents/repos/DSPBenchLarcc/dspbench-flink/data/books.dat
+wc.source.path=/home/DSPBenchs/dspbench-flink/data/books.dat
 
-wc.kafka.zookeeper.host=172.16.151.15:9092
+wc.kafka.zookeeper.host=kafka:9092
 wc.kafka.source.topic=books
 
 wc.splitter.threads=1
@@ -16,4 +16,4 @@ metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/gabriel/Documents/wordcount
+metrics.output=/home/metrics/wordcount
