--- a/dspbench-flink/src/main/resources/config/spikedetection.properties
+++ b/dspbench-flink/src/main/resources/config/spikedetection.properties
@@ -13,6 +13,7 @@ sd.spike_detector.threshold=0.03
 
 metrics.enabled=true
 metrics.reporter=csv
+metrics.interval.value=1
 metrics.interval.unit=seconds
 
 metrics.output=/home/metrics/spikeDetection
