outlier new metrics

--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,4 @@ buildNumber.properties
 dspbench-flink/bin/main/config/*
 dspbench-flink/bin/main/frauddetection/*
 dspbench-flink/bin/main/sentimentanalysis/*
+dspbench-commons/*
