simple.json is not thread-safe

--- a/dspbench-flink/build.gradle
+++ b/dspbench-flink/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'org.json:json:20230618'
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'com.aliasi:lingpipe:4.0.1'
