--- a/dspbench-flink/src/main/resources/config/clickanalytics.properties
+++ b/dspbench-flink/src/main/resources/config/clickanalytics.properties
@@ -3,6 +3,8 @@ ca.source.class=flink.source.FileSource
 ca.source.path=/home/DSPBench/dspbench-flink/data/click-stream.json
 ca.source.parser=org.dspbench.applications.clickanalytics.ClickStreamParser
 
+ca.parser.threads=1
+
 ca.visit.sink.threads=1
 ca.visit.sink.class=flink.sink.ConsoleSink
 
