--- a/dspbench-flink/src/main/resources/config/frauddetection.properties
+++ b/dspbench-flink/src/main/resources/config/frauddetection.properties
@@ -3,6 +3,8 @@ fd.source.class=flink.source.FileSource
 fd.source.path=/home/DSPBench/dspbench-flink/data/credit-card.dat
 fd.source.parser=flink.parsers.TransactionParser
 
+fd.parser.threads=1
+
 fd.predictor.threads=1
 fd.predictor.model=mm
 fd.local.predictor=true
@@ -15,6 +17,7 @@ fd.sink.threads=1
 fd.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.interval.value=1
 metrics.reporter=csv
 metrics.interval.unit=seconds
 
