--- a/dspbench-flink/src/main/resources/config/logprocessing.properties
+++ b/dspbench-flink/src/main/resources/config/logprocessing.properties
@@ -2,6 +2,8 @@ lp.source.threads=1
 lp.source.class=flink.source.FileSource
 lp.source.path=/home/DSPBench/dspbench-flink/data/http-server.log
 
+lp.parser.threads=1
+
 lp.count.sink.threads=1
 lp.count.sink.class=flink.sink.ConsoleSink
 
