--- a/dspbench-flink/src/main/resources/config/machineoutlier.properties
+++ b/dspbench-flink/src/main/resources/config/machineoutlier.properties
@@ -1,7 +1,9 @@
 mo.source.threads=1
 mo.source.class=flink.source.FileSource
 mo.source.path=/home/DSPBench/dspbench-flink/data/machine-usage.csv
-        
+
+mo.parser.threads=1
+
 mo.scorer.threads=1
 mo.scorer.data_type=machineMetadata
 mo.anomaly_scorer.threads=1
@@ -12,6 +14,7 @@ mo.sink.threads=1
 mo.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.interval.value=1
 metrics.reporter=csv
 metrics.interval.unit=milliseconds
 
