--- a/dspbench-flink/src/main/resources/config/sentimentanalysis.properties
+++ b/dspbench-flink/src/main/resources/config/sentimentanalysis.properties
@@ -2,6 +2,8 @@ sa.source.threads=1
 sa.source.class=flink.source.FileSource
 sa.source.path=/home/DSPBench/dspbench-flink/data/tweetstream.jsonl
 
+sa.parser.threads=1
+
 sa.classifier.threads=1
 sa.classifier.type=basic
 
@@ -10,6 +12,7 @@ sa.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
 metrics.reporter=csv
+metrics.interval.value=1
 metrics.interval.unit=seconds
 
 metrics.output=/home/metrics/sentimentAnalysis
