--- a/dspbench-flink/src/main/resources/config/smartgrid.properties
+++ b/dspbench-flink/src/main/resources/config/smartgrid.properties
@@ -4,6 +4,8 @@ sg.source.threads=1
 sg.source.class=flink.source.FileSource
 sg.source.path=/home/DSPBench/dspbench-flink/data/smart-grid.csv
 
+sg.parser.threads=1
+
 sg.outlier.sink.threads=1
 sg.outlier.sink.class=flink.sink.ConsoleSink
 
@@ -20,6 +22,8 @@ sg.outlier_detector.threads=1
 sg.house_load.frequency=3
 sg.plug_load.frequency=3
 
+metrics.interval.value=1
+metrics.reporter=csv
 metrics.enabled=true
 metrics.interval.unit=seconds
 
