--- a/dspbench-flink/src/main/resources/config/trafficmonitoring.properties
+++ b/dspbench-flink/src/main/resources/config/trafficmonitoring.properties
@@ -3,6 +3,8 @@ tm.source.class=flink.source.FileSource
 tm.source.path=/home/DSPBench/dspbench-flink/data/taxi-traces.csv
 tm.source.parser=flink.parser.BeijingTaxiTraceParser
 
+tm.parser.threads=1
+
 tm.road.feature.id_key=osm_id
 tm.map_matcher.shapefile=/home/DSPBench/dspbench-flink/data/beijing/roads.shp
 tm.map_matcher.threads=1
@@ -16,6 +18,8 @@ tm.speed_calculator.threads=1
 tm.sink.threads=1
 tm.sink.class=flink.sink.ConsoleSink
 
+metrics.interval.value=1
+metrics.reporter=csv
 metrics.enabled=true
 metrics.interval.unit=seconds
 
