--- a/dspbench-flink/src/main/resources/config/wordcount.properties
+++ b/dspbench-flink/src/main/resources/config/wordcount.properties
@@ -2,6 +2,8 @@ wc.source.threads=1
 wc.source.class=flink.source.FileSource
 wc.source.path=/home/DSPBench/dspbench-flink/data/books.dat
 
+wc.parser.threads=1
+
 wc.kafka.zookeeper.host=kafka:9092
 wc.kafka.source.topic=books
 
