--- a/dspbench-flink/src/main/resources/config/wordcount.properties
+++ b/dspbench-flink/src/main/resources/config/wordcount.properties
@@ -1,6 +1,6 @@
 wc.source.threads=1
 wc.source.class=flink.source.FileSource
-wc.source.path=/home/DSPBench/dspbench-flink/data/books.dat
+wc.source.path=/home/gmap/DSPBench/dspbench-flink/data/books.dat
 
 wc.parser.threads=1
 
@@ -13,9 +13,11 @@ wc.counter.threads=1
 wc.sink.threads=1
 wc.sink.class=flink.sink.ConsoleSink
 
+wc.runtime_sec=60
+
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/metrics/wordcount
+metrics.output=/home/gmap/metrics/wordcount
