--- a/dspbench-flink/build.gradle
+++ b/dspbench-flink/build.gradle
@@ -26,10 +26,11 @@ repositories {
 
 dependencies {
     implementation 'joda-time:joda-time:2.10.14'
-    implementation 'org.apache.flink:flink-java:1.15.1'
-    implementation 'org.apache.flink:flink-clients:1.15.1'
-    compileOnly 'org.apache.flink:flink-streaming-java:1.15.1'
-    implementation 'org.apache.flink:flink-connector-kafka:1.15.1'
+    implementation 'org.apache.flink:flink-java:1.18.1'
+    implementation 'org.apache.flink:flink-clients:1.18.1'
+    compileOnly 'org.apache.flink:flink-streaming-java:1.18.1'
+    implementation 'org.apache.flink:flink-connector-kafka:3.0.1-1.18'
+    compileOnly 'org.apache.flink:flink-core:1.18.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
