--- a/dspbench-flink/src/main/resources/config/spikedetection.properties
+++ b/dspbench-flink/src/main/resources/config/spikedetection.properties
@@ -1,6 +1,6 @@
 sd.source.threads=1
 sd.source.class=flink.source.FileSource
-sd.source.path=/home/DSPBench/dspbench-flink/data/sensors.dat
+sd.source.path=/home/gmap/DSPBench/dspbench-flink/data/sensors.dat
 
 sd.sink.threads=1
 sd.sink.class=flink.sink.ConsoleSink
@@ -10,6 +10,8 @@ sd.moving_average.threads=1
 sd.moving_average.window=1000
 sd.spike_detector.threads=1
 sd.spike_detector.threshold=0.03
+
+sd.runtime_sec=60
 
 metrics.enabled=true
 metrics.reporter=csv
