--- a/dspbench-producer/src/main/resources/producer.properties
+++ b/dspbench-producer/src/main/resources/producer.properties
@@ -1,3 +1,4 @@
-metadata.broker.list=localhost:9092
+zk.connect=10.32.45.44:2181
 serializer.class=kafka.serializer.StringEncoder
 request.required.acks=1
+metadata.broker.list=10.32.45.44:9092
